--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   "dependencies": {
     "core-js": "^3.6.4",
     "element-ui": "^2.13.0",
+    "v-contextmenu": "^2.9.0",
     "vue": "^2.6.11",
     "vue-draggable-resizable-gorkys": "^2.3.6",
     "vue-router": "^3.1.5",
+    "vue-runtime-helpers": "^1.1.2",
     "vuedraggable": "^2.23.2",
+    "vuescroll": "^4.15.0-beta.1",
     "vuex": "^3.1.2"
   },
   "devDependencies": {
