--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
     "element-ui": "^2.13.0",
+    "json-diff": "^0.5.4",
     "v-contextmenu": "^2.9.0",
     "vue": "^2.6.11",
     "vue-draggable-resizable-gorkys": "^2.3.6",
